fixing spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,7 +47,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 /* our mission section */
@@ -57,7 +56,7 @@ body {
   padding-top: 70px;
   height: 700px;
   width: 1200px;
-  justify-content: center;
+  align-items: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
 }
 
@@ -71,6 +70,8 @@ body {
   height: 700px;
   width: 1000px;
   padding-top: 60px;
+  display: flex;
+  justify-content: center;
 }
 
 .tealist {
@@ -96,15 +97,13 @@ body {
 }
 
 /* adresses */
+
 .locations {
   display: flex;
   justify-content: space-around;
-  align-content: center;
+  align-items: center;
   margin-left: 20px;
   margin-right: 20px;
-}
-
-.locations{
   height: 500px;
   width: 1200px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
@@ -120,10 +119,12 @@ body {
   width: 300px;
   height: 300px;
 }
+
 .contact-info {
   display: flex;
-  align-content: center;
+  align-items: center;
 }
+
 .contact-info .copyright {
   align-self: flex-start;
 }
